#18651 closed bug (fixed)

[CharacterMap] copied escaped 4 bytes charactes are truncated ; keybindings don't have effect

Reported by: tzu_mi Owned by: axeld
Priority: normal Milestone: R1/beta5
Component: Applications/CharacterMap Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Hi escaped 4 bytes charactes ( first byte >= f0 ) are truncated to the 15th byte when copied with the right click menu; there are keybindings too, opt+c to copy the character, and shit+opt+c to copy the escaped character, but don't have effect

experienced on walter hrev 57365 x86_64

Attachments (1)

charactermap.png (277.0 KB ) - added by tzu_mi 16 months ago.
probably pasting the escaped string to diskprobe there was an already existing trailing "0", if you try to copy, i.e. one of the game cards as the ace of hearts, into stylededit or leaving opened the clipnboard monitor of clipdinger, you won't see the 16th byte ot the 4-bytes long utf-8 glyph, but only 15 of them

Download all attachments as: .zip

Change History (3)

comment:1 by waddlesplash, 16 months ago

Summary: [ CHARACTERMAP ] copied escaped 4 bytes charactes are truncated ; keybindings don't have effect[CharacterMap] copied escaped 4 bytes charactes are truncated ; keybindings don't have effect

I can't reproduce this. I copied the first character of the "Linear B Syllabary" block (F0 90 80 80) and pasted it into DiskProbe, and it pasted correctly.

by tzu_mi, 16 months ago

Attachment: charactermap.png added

probably pasting the escaped string to diskprobe there was an already existing trailing "0", if you try to copy, i.e. one of the game cards as the ace of hearts, into stylededit or leaving opened the clipnboard monitor of clipdinger, you won't see the 16th byte ot the 4-bytes long utf-8 glyph, but only 15 of them

comment:2 by madmax, 10 months ago

Milestone: UnscheduledR1/beta5
Resolution: fixed
Status: newclosed

Fixed in hrev57724.

Note: See TracTickets for help on using tickets.